feat(app): replace Track Memory arcade with Track Details maps
Ship static facility maps, pit lane, ASBK superbike records, and the Track Details rename after removing the crashing Skia ride.

Co-authored-by: Cursor <cursoragent@cursor.com>